Bug 416669 - Emoji Selector has Wayland generic icon in its window decoration and in task switcher
Summary: Emoji Selector has Wayland generic icon in its window decoration and in task ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Emoji Selector (other bugs)
Version First Reported In: 5.17.90
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-01-23 22:10 UTC by Patrick Silva
Modified: 2020-02-20 00:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot of the window decoration (14.20 KB, image/png)
2020-01-23 22:10 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2020-01-23 22:10:50 UTC
Created attachment 125350 [details]
screenshot of the window decoration

STEPS TO REPRODUCE
1. start Wayland session
2. open Emoji Selector by pressing meta+. (window decoration shows Wayland generic icon, task manager shows the correct icon)
3. press alt+tab and hold alt key: task switcher also shows the Wayland generic icon


EXPECTED RESULT
Emoji Selector has the correct icon in its window decoration and in task switcher

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 5.17.90
KDE Frameworks Version: 5.66.0
Qt Version: 5.14.0
Comment 1 Aleix Pol 2020-02-20 00:50:02 UTC
Git commit c92e4845397d7abe3905ec7d31a53ab17d4316f0 by Aleix Pol.
Committed on 20/02/2020 at 00:48.
Pushed by apol into branch 'Plasma/5.18'.

emojier: properly specify the application component name to KAboutData

Otherwise KWin would get the full name as
org.kde.org.kde.plasma.emojier.

M  +1    -1    applets/kimpanel/backend/ibus/emojier/emojier.cpp

https://commits.kde.org/plasma-desktop/c92e4845397d7abe3905ec7d31a53ab17d4316f0