emojier: properly specify the application component name to KAboutData

Otherwise KWin would get the full name as
org.kde.org.kde.plasma.emojier.

BUG: 416669